# xgboost-lab

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: data.yaml  data_california.yaml  model_baseline.yaml  model_california.yaml  model_tuned.yaml  tuning.yaml
knowledge/: 01-what-is-xgboost.md  02-boosting-additive-model-and-newton.md  03-loss-functions-and-cross-entropy.md  04-how-trees-split-and-histograms.md  05-bias-variance-and-the-knobs.md  06-regression-and-monotonic-constraints.md  README.md
notebooks/: 1.0-breast-cancer-baseline.ipynb  2.0-california-housing-regression.ipynb
scripts/: check_gpu.py  download_data.py  inspect_tree.py  train.py
src/xgblearn/: __init__.py  config.py
src/xgblearn/data/: __init__.py  loaders.py  splits.py
src/xgblearn/features/: __init__.py
src/xgblearn/interpret/: __init__.py
src/xgblearn/models/: __init__.py  evaluate.py  train.py
src/xgblearn/tracking/: __init__.py  mlflow_utils.py
tests/: conftest.py  test_config.py  test_data.py  test_models.py  test_regression.py  test_smoke.py
